Fix duplicate entry for user 'Misol' in login.html

--- a/login.html
+++ b/login.html
@@ -118,7 +118,8 @@
         // Dados fixos dos usuários
         const users = {
             "Patati": { password: "patati@123", profilePic: "user1_perf.png" },
-            "Misol": { password: "misol@1234", profilePic: "user2_perf.png" }
+            "Misol": { password: "misol@1234", profilePic: "user2_perf.png" },
+            "Lilika": { password: "lilika@1234", profilePic: "user3_perf.png" }
         };
 
         function login() {
